removed comment shorthand

--- a/Update.html
+++ b/Update.html
@@ -126,6 +126,7 @@
                 <li>Reduntant of #[id]</li>
             </ul>
             <li>\ENDSECTION\</li>
+            <li>comment</li>
         </ul>
     </div>
     <hr>
