\font{arial} as start, .[class]text| fix

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
         </div>
     </div>
     <div class="main-content">
-        <textarea class="text-editor" style="resize:horizontal" id="text-editor" spellcheck placeholder="# text here" autofocus>\FONT: arial\</textarea>
+        <textarea class="text-editor" style="resize:horizontal" id="text-editor" spellcheck placeholder="# text here" autofocus>\font{arial}</textarea>
         <div class="preview" style="resize: horizontal;overflow: auto;width:50%" id="preview"></div>
     </div>
     <div class="context-menu-container hidden" id="context-menu">
