--- a/Update.html
+++ b/Update.html
@@ -117,6 +117,7 @@
         <h3 class="fixed">Fixes</h3>
         <ul>
             <li>When the page is loaded the text is converted</li>
+            <li>.[class]text triggered the textbox regex, it shouldn't now</li>
         </ul>
         <h3 class="removed">Removed</h3>
         <ul>
