preview larger than page

--- a/Update.html
+++ b/Update.html
@@ -118,6 +118,7 @@
         <ul>
             <li>When the page is loaded the text is converted</li>
             <li>.[class]text triggered the textbox regex, it shouldn't now</li>
+            <li>Preview was 1px larger than the page</li>
         </ul>
         <h3 class="removed">Removed</h3>
         <ul>
