--- a/Update.html
+++ b/Update.html
@@ -120,6 +120,7 @@
             <li>When the page is loaded the text is converted</li>
             <li>.[class]text triggered the textbox regex, it shouldn't now</li>
             <li>Preview was 1px larger than the page</li>
+            <li>If caps lock was on it would break key combinations that used shift</li>
         </ul>
         <h3 class="removed">Removed</h3>
         <ul>
