new tabs for emojis and upodate log

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
                 <button style="cursor:help" title="Alt Click the preview" class="editing-button" onclick="setPreviewMode()">Fullscreen Preview</button>
                 <button style="cursor:help" title="Alt Click the editor" class="editing-button" onclick="setEditMode()">Editing Mode</button>
                 <span class="divider"></span>   
-                <a href="./Emojis/Emojis.html"><button class="editing-button" style="cursor:help">Emoji List</button></a>
+                <button class="editing-button" style="cursor:help" onclick='window.open("./Emojis", "_blank")'>Emoji List</button>
                 <span class="divider"></span>
-                <a href="./Update.html"><button class="editing-button" style="cursor: pointer;" title="V 1.0.1">Updates</button></a>
+                <button class="editing-button" style="cursor: pointer;" title="V 1.0.1" onclick="window.open('./Update.html', '_blank')">Updates</button>
                 <span class="divider"></span>
                 <a href="./README.md"><button class="editing-button" style="cursor: pointer;" title="help">Help</button></a>
             </fieldset>
