--- a/Update.html
+++ b/Update.html
@@ -113,6 +113,7 @@
             <li>$$2 + 2$$ is now, solve: $$$2 + 2$$$</li>
             <li>#[id] now returns a div element instead of a span element</li>
             <li>The transition from light to dark mode and from dark to light mode is less jarring</li>
+            <li>Link to this and the link to the list of emojis now open in new tabs</li>
         </ul>
         <li>Rounded Buttons</li>
         <h3 class="fixed">Fixes</h3>
