alternative to {*'css'text}, query strings

--- a/Update.html
+++ b/Update.html
@@ -107,6 +107,12 @@
                 <li>\include{include}</li>
                 <li>\END\ and \SECTION\ also work this way</li>
             </ul>
+            <li>Search query strings</li>
+            <ul>
+                <li>preview=color, color of the preview</li>
+                <li>previewtext=color, color of the preview text</li>
+            </ul>
+            <li>*[css]text| as alternative to {*"css" text}</li>
         </ul>
         <h3 class="changed">Changes</h3>
         <ul>
@@ -114,14 +120,15 @@
             <li>#[id] now returns a div element instead of a span element</li>
             <li>The transition from light to dark mode and from dark to light mode is less jarring</li>
             <li>Link to this and the link to the list of emojis now open in new tabs</li>
+            <li>Rounded Buttons</li>
         </ul>
-        <li>Rounded Buttons</li>
         <h3 class="fixed">Fixes</h3>
         <ul>
             <li>When the page is loaded the text is converted</li>
             <li>.[class]text triggered the textbox regex, it shouldn't now</li>
             <li>Preview was 1px larger than the page</li>
             <li>If caps lock was on it would break key combinations that used shift</li>
+            <li>Markdown "emoji"</li>
         </ul>
         <h3 class="removed">Removed</h3>
         <ul>
