--- a/Update.html
+++ b/Update.html
@@ -129,6 +129,7 @@
             <li>Preview was 1px larger than the page</li>
             <li>If caps lock was on it would break key combinations that used shift</li>
             <li>Markdown "emoji"</li>
+            <li>Border shorthand fix</li>
         </ul>
         <h3 class="removed">Removed</h3>
         <ul>
