--- a/Update.html
+++ b/Update.html
@@ -116,7 +116,7 @@
         </ul>
         <h3 class="changed">Changes</h3>
         <ul>
-            <li>$$2 + 2$$ is now, solve: $$$2 + 2$$$</li>
+            <li>$$2 + 2$$ is now, $$$2 + 2$$$</li>
             <li>#[id] now returns a div element instead of a span element</li>
             <li>The transition from light to dark mode and from dark to light mode is less jarring</li>
             <li>Link to this and the link to the list of emojis now open in new tabs</li>
