--- a/Update.html
+++ b/Update.html
@@ -69,6 +69,9 @@
                 <li><a href="#1.3.1">1.3.1</a></li>
             </ul>
             <li><a href="#1.4.0">1.4.0</a></li>
+            <ul>
+                <li><a href="#1.4.1">1.4.1</a></li>
+            </ul>
         </ul>
     </ul>
     </div>
@@ -76,6 +79,19 @@
     <h1 style="font-size:3.8em;"><a href="./index.html" id="home-link">Home</a></h1>
     <h1 style="font-size:3.5em">Updates</h1>
     <hr>
+    <div class="version-container">
+        <h2 class="version-num">1.4.1</h2>
+        <h3 class="added">Additions</h3>
+        <ul>
+            <li>Regional_indicators</li>
+        </ul>
+        <h3 class="fixed">Fixes</h3>
+        <ul>
+            <li>:reg:letter:</li>
+        </ul>
+    </div>
+    <hr>
+    <br>
     <div class="version-container" id="1.4.0">
         <h2 class="version-num">1.4.0</h2>
         <h3 class="added">Additions</h3>
