--- a/Update.html
+++ b/Update.html
@@ -71,6 +71,7 @@
             <li><a href="#1.4.0">1.4.0</a></li>
             <ul>
                 <li><a href="#1.4.1">1.4.1</a></li>
+                <li><a href="#1.4.2">1.4.2</a></li>
             </ul>
         </ul>
     </ul>
@@ -79,7 +80,17 @@
     <h1 style="font-size:3.8em;"><a href="./index.html" id="home-link">Home</a></h1>
     <h1 style="font-size:3.5em">Updates</h1>
     <hr>
-    <div class="version-container">
+    <div class="version-container" id="1.4.2">
+        <h2 class="version-num">1.4.2</h2>
+        <h3 class="changed">Changes</h3>
+        <ul>
+            <li>\EMOJI\ provides a random emoji from the list of emojis</li>
+            <li>:U_number: is now not case sensitive</li>
+        </ul>
+    </div>
+    <hr>
+    <br>
+    <div class="version-container" id="1.4.1">
         <h2 class="version-num">1.4.1</h2>
         <h3 class="added">Additions</h3>
         <ul>
