--- a/Update.html
+++ b/Update.html
@@ -72,6 +72,8 @@
             <ul>
                 <li><a href="#1.4.1">1.4.1</a></li>
                 <li><a href="#1.4.2">1.4.2</a></li>
+                <li><a href="#1.4.3">1.4.3</a></li>
+                <li><a href="#1.4.3">1.4.3</a></li>
             </ul>
         </ul>
     </ul>
@@ -80,6 +82,23 @@
     <h1 style="font-size:3.8em;"><a href="./index.html" id="home-link">Home</a></h1>
     <h1 style="font-size:3.5em">Updates</h1>
     <hr>
+    <div class="version-container" id="1.4.2">
+        <h2 class="version-num">1.4.2</h2>
+        <h3 class="added">Additions</h3>
+        <ul>
+            <li>\undefemoji{emoji}</li>
+            <ul>
+                <li>undefines a custom emoji</li>
+            </ul>
+        </ul>
+        <h3 class="changed">Changes</h3>
+        <ul>
+            <li>\DEFEMOJI :emoji: name\ is now also \defemoji{emoji}{name}</li>
+            <li>\DEFEMOJI is also now not case sensitive</li>
+        </ul>
+    </div>
+    <hr>
+    <br>
     <div class="version-container" id="1.4.2">
         <h2 class="version-num">1.4.2</h2>
         <h3 class="changed">Changes</h3>
