--- a/Update.html
+++ b/Update.html
@@ -90,6 +90,7 @@
             <ul>
                 <li>undefines a custom emoji</li>
             </ul>
+            <li>It now saves the emojis you have defiened</li>
         </ul>
         <h3 class="changed">Changes</h3>
         <ul>
