--- a/Update.html
+++ b/Update.html
@@ -96,6 +96,7 @@
         <ul>
             <li>\DEFEMOJI :emoji: name\ is now also \defemoji{emoji}{name}</li>
             <li>\DEFEMOJI is also now not case sensitive</li>
+            <li>Layout of the emoji list page</li>
         </ul>
     </div>
     <hr>
