--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <button style="cursor:help" title="Alt Click the preview" class="editing-button" onclick="setPreviewMode()">Fullscreen Preview</button>
                 <button style="cursor:help" title="Alt Click the editor" class="editing-button" onclick="setEditMode()">Editing Mode</button>
                 <span class="divider"></span>   
-                <button class="editing-button" style="cursor:help" onclick='window.open("./Emojis", "_blank")'>Emoji List</button>
+                <button class="editing-button" style="cursor:help" onclick='window.open("./Emojis/index.html", "_blank")'>Emoji List</button>
                 <span class="divider"></span>
                 <button class="editing-button" style="cursor: pointer;" title="V 1.0.1" onclick="window.open('./Update.html', '_blank')">Updates</button>
                 <span class="divider"></span>
