--- a/Update.html
+++ b/Update.html
@@ -82,6 +82,16 @@
     <h1 style="font-size:3.8em;"><a href="./index.html" id="home-link">Home</a></h1>
     <h1 style="font-size:3.5em">Updates</h1>
     <hr>
+    <div class="version-container" id="1.4.4">
+        <h2 class="version-num">1.4.4</h2>
+        <h3 class="added">Additions</h3>
+        <ul>
+            <li>\n is a break element</li>
+            <li>unicode escapes (\u00ff)</li>
+        </ul>
+    </div>
+    <hr>
+    <br>
     <div class="version-container" id="1.4.3">
         <h2 class="version-num">1.4.3</h2>
         <h3 class="added">Additions</h3>
