--- a/Update.html
+++ b/Update.html
@@ -88,6 +88,7 @@
         <ul>
             <li>\n is a break element</li>
             <li>unicode escapes (\u00ff)</li>
+            <li>Loading screen</li>
         </ul>
     </div>
     <hr>
