--- a/index.html
+++ b/index.html
@@ -9,8 +9,35 @@
     <link rel="shortcut icon" type="image/png" href="./imgs/fav.png">
     <link rel="stylesheet" type="text/css" href="./css/hidden-buttons.css">
     <link rel="stylesheet" type="text/css" href="./css/contextmenu.css">
+    <style>
+        #loading-screen{
+            width:100%;
+            height:100%;
+            position:absolute;
+            z-index:3;
+            background-color: black;
+            font-size:5em;
+        }
+        #loading-screen-text{
+            position: absolute;
+            top:50%;
+            left:50%;
+            transform: translateX(-50%) translateY(-50%);
+            animation: loading-fade 1000ms ease-in-out infinite alternate;
+            color:white;
+        }
+        @keyframes loading-fade{
+            from{
+                color:white;
+            }
+            to{
+                color:black;
+            }
+        }
+    </style>
 </head>
 <body ondrop="dropHandler(event)" ondragover="dragOverHandler(event)">
+    <div id="loading-screen"><span id="loading-screen-text">Loading...</span></div>
     <div class="editing-bar" id="editing-bar" style="visibility: visible;">
         <button id="file-title" class="bar-section-title" title="file">
             🗎
