line-height removal

--- a/Update.html
+++ b/Update.html
@@ -82,6 +82,18 @@
     <h1 style="font-size:3.8em;"><a href="./index.html" id="home-link">Home</a></h1>
     <h1 style="font-size:3.5em">Updates</h1>
     <hr>
+    <div class="version-container" id="1.4.5">
+        <h2 class="version-num">1.4.5</h2>
+        <h3 class="removed">Removed</h3>
+        <ul>
+            <li>Line height shortcut</li>
+            <ul>
+                <li>|height text|</li>
+            </ul>
+        </ul>
+    </div>
+    <hr>
+    <br>
     <div class="version-container" id="1.4.4">
         <h2 class="version-num">1.4.4</h2>
         <h3 class="added">Additions</h3>
