--- a/Update.html
+++ b/Update.html
@@ -74,6 +74,9 @@
                 <li><a href="#1.4.2">1.4.2</a></li>
                 <li><a href="#1.4.3">1.4.3</a></li>
                 <li><a href="#1.4.3">1.4.3</a></li>
+                <li><a href="#1.4.4">1.4.4</a></li>
+                <li><a href="#1.4.5">1.4.5</a></li>
+                <li><a href="#1.4.6">1.4.6</a></li>
             </ul>
         </ul>
     </ul>
@@ -82,6 +85,15 @@
     <h1 style="font-size:3.8em;"><a href="./index.html" id="home-link">Home</a></h1>
     <h1 style="font-size:3.5em">Updates</h1>
     <hr>
+    <div class="version-container" id="1.4.6">
+        <h2 class="version-num">1.4.6</h2>
+        <h3 class="changed">Changes</h3>
+        <ul>
+            <li>Textbox shortcut is now [w:h]text| instead of ([w:h])[(style)]text|</li>
+        </ul>
+    </div>
+    <hr>
+    <br>
     <div class="version-container" id="1.4.5">
         <h2 class="version-num">1.4.5</h2>
         <h3 class="removed">Removed</h3>
