--- a/Update.html
+++ b/Update.html
@@ -87,6 +87,10 @@
     <hr>
     <div class="version-container" id="1.4.6">
         <h2 class="version-num">1.4.6</h2>
+        <h3 class="added">Additions</h3>
+        <ul>
+            <li>adding an ! after the [w:h] part of textbox makes it not resizeable whether or not a w and height are provided</li>
+        </ul>
         <h3 class="changed">Changes</h3>
         <ul>
             <li>Textbox shortcut is now [w:h]text| instead of ([w:h])[(style)]text|</li>
