--- a/Update.html
+++ b/Update.html
@@ -77,6 +77,7 @@
                 <li><a href="#1.4.4">1.4.4</a></li>
                 <li><a href="#1.4.5">1.4.5</a></li>
                 <li><a href="#1.4.6">1.4.6</a></li>
+                <li><a href="#1.4.7">1.4.7</a></li>
             </ul>
         </ul>
     </ul>
@@ -85,6 +86,15 @@
     <h1 style="font-size:3.8em;"><a href="./index.html" id="home-link">Home</a></h1>
     <h1 style="font-size:3.5em">Updates</h1>
     <hr>
+    <div class="version-container" id="1.4.7">
+        <h2 class="version-num">1.4.7</h2>
+        <h3 class="added">Additions</h3>
+        <ul>
+            <li>Feedback when adding/removing custom emotes</li>
+        </ul>
+    </div>
+    <hr>
+    <br>
     <div class="version-container" id="1.4.6">
         <h2 class="version-num">1.4.6</h2>
         <h3 class="added">Additions</h3>
