Editing bar transition

--- a/Update.html
+++ b/Update.html
@@ -91,6 +91,7 @@
         <h3 class="added">Additions</h3>
         <ul>
             <li>Feedback when adding/removing custom emotes</li>
+            <li>Transition when turning on and off the bar</li>
         </ul>
     </div>
     <hr>
