--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </head>
 <body ondrop="dropHandler(event)" ondragover="dragOverHandler(event)">
     <div id="loading-screen"><span id="loading-screen-text">Loading...</span></div>
-    <div class="editing-bar" id="editing-bar" style="visibility: visible;">
+    <div class="editing-bar" id="editing-bar">
         <button id="file-title" class="bar-section-title" title="file">
             🗎
         </button>
