--- a/Update.html
+++ b/Update.html
@@ -92,6 +92,11 @@
         <ul>
             <li>Feedback when adding/removing custom emotes</li>
             <li>Transition when turning on and off the bar</li>
+            <li>\import((g)){css}</li>
+            <ul>
+                <li>Links the css stylesheet given if (g) is not there</li>
+                <li>If (g) is given it links the font given from google fonts</li>
+            </ul>
         </ul>
     </div>
     <hr>
