+1 -> thumbs_up, and -1, bking -> black_king and other chess pieces

--- a/Update.html
+++ b/Update.html
@@ -99,6 +99,15 @@
                 <li>If (g) is given it links the font given from google fonts</li>
             </ul>
         </ul>
+        <h3 class="changed">Changes</h3>
+        <ul>
+            <li>Changed names of: </li>
+            <ul>
+                <li>bking -> black_king (and all other chess peices)</li>
+                <li>+1 -> thumbs_up</li>
+                <li>-1 thumbs_down</li>
+            </ul>
+        </ul>
     </div>
     <hr>
     <br>
