--- a/Update.html
+++ b/Update.html
@@ -103,7 +103,7 @@
         <ul>
             <li>Changed names of: </li>
             <ul>
-                <li>bking -> black_king (and all other chess peices)</li>
+                <li>bking -> black_king (and all other chess pieces)</li>
                 <li>+1 -> thumbs_up</li>
                 <li>-1 thumbs_down</li>
             </ul>
