--- a/Update.html
+++ b/Update.html
@@ -93,10 +93,10 @@
             <li>Feedback when adding/removing custom emotes</li>
             <li>Transition when turning on and off the bar</li>
             <li>Unicode flag shortcuts</li>
-            <li>\import((g)){css}</li>
+            <li>\import((gf)){css}</li>
             <ul>
-                <li>Links the css stylesheet given if (g) is not there</li>
-                <li>If (g) is given it links the font given from google fonts</li>
+                <li>Links the css stylesheet given if (gf) is not there</li>
+                <li>If (gf) is given it links the font given from google fonts</li>
             </ul>
         </ul>
         <h3 class="changed">Changes</h3>
