emoji-page layout, skin-tone renames, copying in emoji-page

--- a/Emojis/index.html
+++ b/Emojis/index.html
@@ -3,39 +3,99 @@
     <script src="../js/emojis.js"></script>
     <meta charset="utf-8">
     <style>
+        html{
+            --side-padding: 6%;
+            padding-left: var(--side-padding);
+            padding-right: var(--side-padding);
+            overflow-x: hidden;
+        }
         h1{
             text-decoration: underline;
         }
         p{
             font-size:2em
         }
+        .emoji-container{
+            font-size:3em;
+            display: grid;
+            grid-template-columns: repeat(5, 10fr);
+            cursor: pointer;
+        }
+        div > .emoji-tooltip{
+            --transition-effects: 100ms linear;
+            visibility: hidden;
+            position:absolute;
+            background-color:transparent;
+            color:transparent;
+            border: none;
+            outline: none;
+            transition: /*START*/
+                background-color var(--transition-effects), 
+                color var(--transition-effects), 
+                border var(--transition-effects), 
+                outline var(--transition-effects);
+            /*END*/
+        }
+        div:hover > .emoji-tooltip{
+            --borer-width: 4px;
+            display:inline;
+            visibility: visible;
+            position:absolute;
+            color:white;
+            font-size:.7em;
+            transform: translateX(-50%);
+            background-color:#000000dd;
+            border-radius: 10%;
+            border: var(--borer-width) solid lightblue;
+        }
     </style>
 </head>
 <body style="text-align: center;font-size:large;font-family:Arial, Helvetica, sans-serif">
     <div style="text-align: center;">
-        <h1>Use like this-> :shortcut:</h1>
+        <h1>Use like this -> :shortcut:</h1>
     </div>
     
     <div id="regular-emoji-shortcuts">
         <h1>Emojis</h1>
+        <div class="emoji-container" id="regular-emoji-container"></div>
     </div>
     <div id="img-emoji-shortcuts">
         <h1>Img Emojis</h1>
+        <div class="emoji-container" id="img-emoji-container"></div>
     </div>
     <script>
         let emojiAlphabetized = Object.keys(EMOJIS).sort((a, b)=>a >= b ? 1 : -1)
         let imgEmojiAlphabetized = Object.keys(imgEmotes).sort((a, b)=> a >= b ? 1 : -1)
-        const regDiv = document.getElementById("regular-emoji-shortcuts")
+        const regDiv = document.getElementById("regular-emoji-container")
         const imgDiv = document.getElementById("img-emoji-shortcuts")
         for(let emoji of emojiAlphabetized){
-            let emojiPara = document.createElement("p")
-            emojiPara.innerHTML = `${emoji}: ${EMOJIS[emoji]}`
+            let emojiPara = document.createElement("div")
+            new Promise((resolve, reject)=>{
+                let emojiTip = document.createElement("div")
+                emojiTip.classList.add("emoji-tooltip")
+                emojiTip.innerText = emoji
+                resolve(emojiTip)
+            }).then(emojiTip=>{
+                emojiPara.appendChild(emojiTip)
+            })
+            emojiPara.innerHTML = EMOJIS[emoji]
+            emojiPara.appendChild(document.createElement('br'))
             regDiv.appendChild(emojiPara)
         }
 
         for(let emoji of imgEmojiAlphabetized){
-            let emojiPara = document.createElement("p")
-            emojiPara.innerHTML = `${emoji}: <img src="${imgEmotes[emoji]}" style="width:1em">`
+            let emojiPara = document.createElement("div")
+            new Promise((resolve, reject)=>{
+                let emojiTip = document.createElement("div")
+                emojiTip.classList.add("emoji-tooltip")
+                emojiTip.innerText = emoji
+                emojiTip.style.fontSize = "2em"
+                resolve(emojiTip)
+            }).then(emojiTip=>{
+                emojiPara.appendChild(emojiTip)
+            })
+            emojiPara.innerHTML =  `<img src="${imgEmotes[emoji]}" style="width:3em;">`
+            emojiPara.appendChild(document.createElement("br"))
             imgDiv.appendChild(emojiPara)
         }
     </script>
