--- a/Update.html
+++ b/Update.html
@@ -98,6 +98,10 @@
                 <li>Links the css stylesheet given if (gf) is not there</li>
                 <li>If (gf) is given it links the font given from google fonts</li>
             </ul>
+            <li>Clicking on emoji in emoji list coppies the shortcut</li>
+            <ul>
+                <li>Right clicking on emoji in emoji list coppies the emoji</li>
+            </ul>
         </ul>
         <h3 class="changed">Changes</h3>
         <ul>
@@ -107,6 +111,8 @@
                 <li>+1 -> thumbs_up</li>
                 <li>-1 thumbs_down</li>
             </ul>
+            <li>Layout of the emoji page</li>
+            <li>Renamed the skintone modifiers</li>
         </ul>
     </div>
     <hr>
