--- a/Update.html
+++ b/Update.html
@@ -77,8 +77,8 @@
                 <li><a href="#1.4.4">1.4.4</a></li>
                 <li><a href="#1.4.5">1.4.5</a></li>
                 <li><a href="#1.4.6">1.4.6</a></li>
-                <li><a href="#1.4.7">1.4.7</a></li>
             </ul>
+            <li><a href="#1.5">1.5</a></li>
         </ul>
     </ul>
     </div>
@@ -86,8 +86,8 @@
     <h1 style="font-size:3.8em;"><a href="./index.html" id="home-link">Home</a></h1>
     <h1 style="font-size:3.5em">Updates</h1>
     <hr>
-    <div class="version-container" id="1.4.7">
-        <h2 class="version-num">1.4.7</h2>
+    <div class="version-container" id="1.5">
+        <h2 class="version-num">1.5</h2>
         <h3 class="added">Additions</h3>
         <ul>
             <li>Feedback when adding/removing custom emotes</li>
@@ -102,6 +102,7 @@
             <ul>
                 <li>Right clicking on emoji in emoji list coppies the emoji</li>
             </ul>
+            <li>Search for emoji</li>
         </ul>
         <h3 class="changed">Changes</h3>
         <ul>
